<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/titulo"
        android:textSize="25sp"
        android:textStyle="bold"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/descripcion"
        android:textSize="14sp"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/email"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_container"
        android:hint="@string/ingresa_tu_email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textSize="16sp"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/contra"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"
    />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_container"
        android:hint="@string/ingresa_tu_contra"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:padding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/olvide_mi_contra"
        android:padding="5dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/iniciar_sesion"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginVertical="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
    >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/black"
        />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/o_inicia_con"
            android:textAlignment="center"
            android:textSize="12sp"/>


        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/black"
        />
    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--    >-->


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogleSignIn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="2dp"
            android:text="@string/google"
            android:textColor="@color/black"
            app:icon="@drawable/ic_google"
            app:iconGravity="textStart"
            app:iconPadding="6dp"
            app:iconSize="20dp"
            app:iconTint="@null"
        />


<!--    </LinearLayout>-->


    <TextView
        android:id="@+id/tvCrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/crear_cuenta"
    />

</LinearLayout>