<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:padding="16dp"
        android:orientation="vertical">

    <EditText
            android:id="@+id/etTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_add_task"
            />

    <RadioGroup
            android:id="@+id/rgCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioButton
                android:id="@+id/rbPersonal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal"
                android:checked="true"
                android:buttonTint="@color/category_personal"
                />

        <RadioButton
                android:id="@+id/rbBusiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/business"
                android:buttonTint="@color/category_business"
                />

        <RadioButton
                android:id="@+id/rbOthers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:buttonTint="@color/category_other"
                />
    </RadioGroup>

    <Button
            android:id="@+id/btnAddTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar_tarea"

            />

</LinearLayout>
