<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".CrearCuentaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Bienvenido!"
        android:textSize="40sp"
        android:textStyle="bold"
    />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Crea una cuenta"
        android:textSize="20sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:orientation="vertical"
    >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_container"
            android:inputType="textEmailAddress"
            android:hint="@string/ingresa_tu_email"
            android:padding="8dp"
            android:textSize="16sp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/contra"
            android:textSize="16sp"
            android:textStyle="bold"
        />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_container"
            android:hint="@string/ingresa_tu_contra"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginTop="6dp"
            android:text="@string/confirm_password"
            android:textSize="16sp"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_container"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="16sp"/>


        <Button
            android:id="@+id/btnCrearCuenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:text="@string/crear_cuenta"
        />
    </LinearLayout>

</LinearLayout>